--- a/google_clone.html
+++ b/google_clone.html
@@ -17,13 +17,21 @@
       </header>
   	<article>
       <img src="./google.jpg" id="googleimg">  
-      <div id="searchbox"><img src="microphone.png" id="microphone"></div>
-      <div id="googlesearch">Google Search</div>
-      <div id="imfeelinglucky">I'm Feeling Lucky</div>  
-
+      <form>
+        <div id="searchbox"><input type="text" name="searchbox"><img src="microphone.png" id="microphone"></div>
+      </form>
+      <div id="googlesearch" class="button">Google Search</div>
+      <div id="imfeelinglucky" class="button">I'm Feeling Lucky</div>  
     </article>
     <footer>
-      
+      <div class="botmenuleft">Advertising</div>
+      <div class="botmenuleft">Business</div>
+      <div class="botmenuleft">About</div>
+      <span id="spanbotmenuright">
+        <div class="botmenuright">Settings</div>
+        <div class="botmenuright">Terms</div>
+        <div class="botmenuright">Privacy</div>
+      </span>
     </footer>
   </body>
 </html>
